js/src/jit-test/tests/for-of/bug-728079-js17-3.js
@@ -1,0 +1,4 @@
+// Cleaned-up version of bug 728079 comment 0.
+
+version(170);
+eval("(function f() { return [[b, a] for ([a, b] of c.items())]; })");
